# ocs2_fun

./: .gitignore  .gitmodules  README.md
ocs2_anymal_robot/: CMakeLists.txt  package.xml
ocs2_anymal_robot/config/: controllers.info  elevation_mapping.yaml  plugins.info  targetCommand.info  task.info
ocs2_anymal_robot/launch/: load_urdf.launch  simple_gazebo.launch
ocs2_anymal_robot/src/: AnymalMpcNode.cpp
ocs2_anymal_robot/urdf/: anymal_gazebo.urdf.xacro
ocs2_api/: CMakeLists.txt  package.xml  setup.py
ocs2_api/launch/: api.launch
ocs2_api/msg/: TiltCommand.msg
ocs2_api/scripts/: battery_node.py  dummy_node.py  estop_node.py  move_to_point_node.py  move_to_point_vector_node.py  obstacle_detection_node.py
ocs2_api/src/ocs2_api/: battery.py  cams_tf.py  dummy.py  dummy2.py  estop.py  height.py  keyboard_detection.py  move_to_point.py  move_to_point_vector.py  obstacle_detection.py  pcl_from_grid.py  plot.py  pointcloud_proc.py  tilt.py
ocs2_api/src/ocs2_api/dummy_folder/: dummy3.py
ocs2_arm/: .setup_assistant  CMakeLists.txt  package.xml  setup.py  spot_w_arm.gv
ocs2_arm/config/: fake_controllers.yaml  gazebo_spot_w_arm.urdf  joint_limits.yaml  kinematics.yaml  new_joint_trajectory_controller.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_joints_controllers.yaml  spot_arm_joint_states.yaml  spot_arm_trajectory_control.yaml  spot_w_arm.srdf  stomp_planning.yaml
ocs2_arm/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch  simple_moveit_controller_manager.launch.xml  simple_moveit_controllers.yaml  simple_rviz_launch.launch  simple_spawn_robot_w_controller.launch  simple_spawn_spot_w_arm.launch  spot_arm_bringup_moveit.launch  spot_moveit_controller_manager.launch  stomp_planning_pipeline.launch.xml
ocs2_arm/src/: move_group.py  moveit_py.py  moveit_py_tutorial_panda.py  simple_arm_camera_vis.py  simple_move.py
ocs2_arm/urdf/: camera_placement.xacro  camera_sensor.xacro  spot_transmission.xacro  spot_w_arm.urdf
ocs2_arm/worlds/: custom_camera_world.world
ocs2_control/: CMakeLists.txt  package.xml
ocs2_control/config/: controllers.info
ocs2_control/include/ocs2_control/: CentralController.h  Controller.h  StateSubscriber.h  StaticController.h  WbcController.h
ocs2_control/include/ocs2_control/simple/: StandController.h
ocs2_control/include/ocs2_control/utils/: LoadConfig.h
ocs2_control/include/ocs2_control/wbc/: SqpSolver.h  SqpWbc.h  Task.h  WbcBase.h
ocs2_control/src/: AnymalControllerNode.cpp  CentralController.cpp  ControllerNode.cpp  StateSubscriber.cpp  StaticController.cpp  WbcController.cpp
ocs2_control/src/simple/: StandController.cpp
ocs2_control/src/utils/: LoadConfig.cpp
ocs2_control/src/wbc/: SqpSolver.cpp  SqpWbc.cpp  Task.cpp  WbcBase.cpp
ocs2_gazebo/: CMakeLists.txt  package.xml
ocs2_gazebo/config/: controllers.yaml
ocs2_gazebo/include/ocs2_gazebo/: ContactSensor.h  JointController.h  StateEstimator.h
ocs2_gazebo/launch/: world.launch
ocs2_gazebo/launch/worlds/custom/: custom.ply  custom.world
ocs2_gazebo/launch/worlds/flat/: flat.world
ocs2_gazebo/launch/worlds/gap_20cm/: gap_20cm.world
ocs2_gazebo/launch/worlds/gap_40cm/: gap_40cm.world
ocs2_gazebo/launch/worlds/normal/: normal.world
ocs2_gazebo/launch/worlds/parkour_local_min/: parkour_local_min.world
ocs2_gazebo/launch/worlds/rough_25cm/: rough_25cm.world
ocs2_gazebo/launch/worlds/slope_20/: slope_20.world
ocs2_gazebo/launch/worlds/stairs/: stairs.ply  stairs.stl  stairs.world
ocs2_gazebo/launch/worlds/step_10cm/: step_10cm.world
ocs2_gazebo/launch/worlds/step_20cm/: step_20cm.world
ocs2_gazebo/launch/worlds/step_25cm/: step_25cm.world
ocs2_gazebo/launch/worlds/stepping_stones/: stepping_stones.ply  stepping_stones.stl  stepping_stones.world
ocs2_gazebo/msg/: JointCommand.msg  JointCommandArray.msg  RobotState.msg
ocs2_gazebo/plugins/: joint_controller_plugin.xml
ocs2_gazebo/src/: ContactSensor.cpp  JointController.cpp  StateEstimator.cpp
ocs2_gazebo/src/world_gen/: generate_world.py  map_generator.py  ply_generator.py  shapes.py  utils.py
ocs2_quadruped_reference/: CMakeLists.txt  package.xml
ocs2_quadruped_reference/include/ocs2_quadruped_reference/: ReferenceGenerator.h
ocs2_quadruped_reference/launch/: joystick_reference.launch  twist_reference.launch
ocs2_quadruped_reference/src/: JoystickReferenceGeneratorNode.cpp  ReferenceGenerator.cpp  TwistReferenceGeneratorNode.cpp
ocs2_quadruped_ros/: CMakeLists.txt  package.xml
ocs2_spot_robot/: CMakeLists.txt  package.xml
ocs2_spot_robot/config/: controllers.info  convex_plane_decomposition_node.yaml  elevation_mapping.yaml  gazebo_plugin_info.yaml  targetCommand.info  task.info
ocs2_spot_robot/launch/: simple_gazebo.launch
ocs2_spot_robot/src/: SpotMpcNode.cpp
ocs2_spot_robot/urdf/: spot_gazebo.urdf.xacro
